{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 28,
  "lineage": "87c5640d-130a-9c30-61a9-065ac8428a34",
  "resources": [
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb591f37612a7318",
            "arn": "arn:aws:ec2:us-east-1:836809165717:elastic-ip/eipalloc-0bb591f37612a7318",
            "association_id": "eipassoc-0cc6762523416a4ae",
            "domain": "vpc",
            "id": "eipalloc-0bb591f37612a7318",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d14ab51cae4f36ff",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-100-56-116-172.compute-1.amazonaws.com",
            "public_ip": "100.56.116.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:internet-gateway/igw-0946ca1b865173e1b",
            "id": "igw-0946ca1b865173e1b",
            "owner_id": "836809165717",
            "tags": {
              "Name": "Production-igw"
            },
            "tags_all": {
              "Name": "Production-igw"
            },
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb591f37612a7318",
            "association_id": "eipassoc-0cc6762523416a4ae",
            "connectivity_type": "public",
            "id": "nat-0d547a0424315fd19",
            "network_interface_id": "eni-0d14ab51cae4f36ff",
            "private_ip": "10.0.1.164",
            "public_ip": "100.56.116.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4e2631fb54cf68f",
            "tags": {
              "Name": "Production-nat-gw"
            },
            "tags_all": {
              "Name": "Production-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_eip.nat",
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:route-table/rtb-0f053779875fa4ffb",
            "id": "rtb-0f053779875fa4ffb",
            "owner_id": "836809165717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d547a0424315fd19",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-private-rt"
            },
            "tags_all": {
              "Name": "Production-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_eip.nat",
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_nat_gateway.nat",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:route-table/rtb-0a09fd87ccf5338a0",
            "id": "rtb-0a09fd87ccf5338a0",
            "owner_id": "836809165717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0946ca1b865173e1b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-public-rt"
            },
            "tags_all": {
              "Name": "Production-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fadd12ba58145a9c",
            "route_table_id": "rtb-0f053779875fa4ffb",
            "subnet_id": "subnet-0b26ecb257275493f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_eip.nat",
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_nat_gateway.nat",
            "module.production_vpc.aws_route_table.private",
            "module.production_vpc.aws_subnet.private",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2bac5567d095cf4",
            "route_table_id": "rtb-0f053779875fa4ffb",
            "subnet_id": "subnet-0ed60517ecb8e8577"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_eip.nat",
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_nat_gateway.nat",
            "module.production_vpc.aws_route_table.private",
            "module.production_vpc.aws_subnet.private",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048116dd58abcba9f",
            "route_table_id": "rtb-0a09fd87ccf5338a0",
            "subnet_id": "subnet-0f4e2631fb54cf68f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_route_table.public",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d237e7620239f00",
            "route_table_id": "rtb-0a09fd87ccf5338a0",
            "subnet_id": "subnet-06930dfc4722aae59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_internet_gateway.gw",
            "module.production_vpc.aws_route_table.public",
            "module.production_vpc.aws_subnet.public",
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:subnet/subnet-0b26ecb257275493f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b26ecb257275493f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836809165717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "Production-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Production-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:subnet/subnet-0ed60517ecb8e8577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed60517ecb8e8577",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836809165717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "Production-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Production-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:subnet/subnet-0f4e2631fb54cf68f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e2631fb54cf68f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "836809165717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "Production-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Production-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:subnet/subnet-06930dfc4722aae59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06930dfc4722aae59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "836809165717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "Production-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Production-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-099cf18c3d6704f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_vpc.aws_vpc.main",
            "module.production_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836809165717:vpc/vpc-099cf18c3d6704f78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0110230f71116ffb8",
            "default_route_table_id": "rtb-0172846c723d381a0",
            "default_security_group_id": "sg-0ce90929c818dc341",
            "dhcp_options_id": "dopt-042f310356489c1f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099cf18c3d6704f78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0172846c723d381a0",
            "owner_id": "836809165717",
            "tags": {
              "Environment": "Production",
              "Name": "Production-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Production-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}